fixed z-index of background image

--- a/src/pages/About/index.css
+++ b/src/pages/About/index.css
@@ -8,6 +8,7 @@
 .about-top-background-div{
     width: 100%;
     position: absolute;
+    z-index: -1;
 }
 .about-top-background-image{
     height: 730px;
